fix for: https://issues.apache.org/jira/browse/AMQCPP-330

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk@1042386 13f79535-47bb-0310-9956-ffa450edef68