activemq-cpp/src/main/decaf/internal/net/Network.cpp
@@ -17,8 +17,10 @@
 
 #include "Network.h"
 
+#include <decaf/lang/Runnable.h>
 #include <decaf/lang/Exception.h>
 #include <decaf/lang/exceptions/IllegalStateException.h>
+#include <decaf/util/StlList.h>
 #include <decaf/util/concurrent/Mutex.h>
 #include <decaf/internal/util/ResourceLifecycleManager.h>
 
@@ -46,7 +48,20 @@ namespace net{
 
         ResourceLifecycleManager resources;
         Mutex lock;
+        StlList<Runnable*> shutdownTasks;
 
+        ~NetworkData() {
+            try{
+                std::auto_ptr< Iterator<Runnable*> > iter( shutdownTasks.iterator() );
+                while( iter->hasNext() ) {
+                    Runnable* task = iter->next();
+                    try{
+                        task->run();
+                        delete task;
+                    } catch(...) {}
+                }
+            } catch(...) {}
+        }
     };
 
 }}}
@@ -104,4 +119,11 @@ void Network::shutdownNetworking() {
 
     // Destory the Network Runtime.
     delete Network::networkRuntime;
+}
+
+////////////////////////////////////////////////////////////////////////////////
+void Network::addShutdownTask( decaf::lang::Runnable* task ) {
+    if( task != NULL ) {
+        this->data->shutdownTasks.add( task );
+    }
 }
