activemq-cpp/src/main/decaf/net/SocketFactory.cpp
@@ -16,6 +16,7 @@
  */
 #include <decaf/net/SocketFactory.h>
 
+#include <decaf/lang/Runnable.h>
 #include <decaf/internal/net/DefaultSocketFactory.h>
 #include <decaf/internal/net/Network.h>
 
@@ -25,6 +26,25 @@ using namespace decaf::net;
 using namespace decaf::util;
 using namespace decaf::util::concurrent;
 using namespace decaf::internal::net;
+
+////////////////////////////////////////////////////////////////////////////////
+namespace {
+
+    class ShutdownTask : public decaf::lang::Runnable {
+    private:
+
+        SocketFactory** defaultRef;
+
+    public:
+
+        ShutdownTask( SocketFactory** defaultRef ) : defaultRef( defaultRef ) {}
+        virtual ~ShutdownTask() {}
+
+        virtual void run() {
+            *defaultRef = NULL;
+        }
+    };
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 SocketFactory* SocketFactory::defaultFactory = NULL;
@@ -54,6 +74,7 @@ SocketFactory* SocketFactory::getDefault() {
         if( defaultFactory == NULL ) {
             defaultFactory = new DefaultSocketFactory();
             networkRuntime->addAsResource( defaultFactory );
+            networkRuntime->addShutdownTask( new ShutdownTask( &defaultFactory ) );
         }
     }
 
