activemq-cpp/src/main/decaf/net/ssl/SSLServerSocketFactory.cpp
@@ -18,9 +18,8 @@
 #include "SSLServerSocketFactory.h"
 
 #include <decaf/io/IOException.h>
-
+#include <decaf/lang/Runnable.h>
 #include <decaf/internal/net/Network.h>
-
 #include <decaf/internal/net/ssl/DefaultSSLContext.h>
 #include <decaf/internal/net/ssl/DefaultSSLServerSocketFactory.h>
 
@@ -30,6 +29,25 @@ using namespace decaf::net::ssl;
 using namespace decaf::lang;
 using namespace decaf::internal::net;
 using namespace decaf::internal::net::ssl;
+
+////////////////////////////////////////////////////////////////////////////////
+namespace {
+
+    class ShutdownTask : public decaf::lang::Runnable {
+    private:
+
+        ServerSocketFactory** defaultRef;
+
+    public:
+
+        ShutdownTask( ServerSocketFactory** defaultRef ) : defaultRef( defaultRef ) {}
+        virtual ~ShutdownTask() {}
+
+        virtual void run() {
+            *defaultRef = NULL;
+        }
+    };
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 ServerSocketFactory* SSLServerSocketFactory::defaultFactory = NULL;
@@ -69,6 +87,8 @@ ServerSocketFactory* SSLServerSocketFactory::getDefault() {
             // Runtime is shutdown.
             netRuntime->addAsResource( defaultFactory );
         }
+
+        netRuntime->addShutdownTask( new ShutdownTask( &defaultFactory ) );
     }
 
     return defaultFactory;
